tests/NormalTests/paczka1/fuzzy1/15476941.err
Error in line 3: WrVODM A39 4,6
Error in line 9: A869 A869 39,4
Error in line 6: WrVODM S349 0,5
Error in line 19: lBjjjU7jswc A39 61,64
Error in line 20: LLO50VQ9ZP S349 85,5
Error in line 28: lBjjjU7jswc A39 95,2
Error in line 25: aCL4alW A39 132,0
Error in line 32: aCL4alW S349 20,3
Error in line 35: A869 A875 60,0
